# desktop-service

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: install.rs  uninstall.rs
src/files/: helper.plist  systemd.tmpl
src/service/: data.rs  mod.rs  web.rs
